--- a/source/css/_custom/custom.styl
+++ b/source/css/_custom/custom.styl
@@ -1,2 +1,8 @@
 // Custom styles.
 // 添加背景图片
+body {
+  background:url(/images/mjl.jpg);
+  background-repeat: no-repeat;
+  background-attachment:fixed;
+  background-size:100% 100%;
+}
